--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LOENUカウンセリングアンケート</title>
+    <title>LOENUカウンセリング</title>
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
     <style>
         :root {
-            --base-color: #6AB2AF;
-            --base-color-dark: #4F8F8C;
-            --base-color-light: #E8F5F4;
+            /* カラーパレットの変更：清潔感のあるネイビーと高級感のあるゴールドベージュ */
+            --base-color: #20364b;       /* 落ち着いたネイビー */
+            --base-color-dark: #152432;  /* さらに濃いネイビー */
+            --base-color-light: #f4f7f9; /* 清潔感のある薄いグレーブルー */
+            --accent-color: #bfa376;     /* ブライダル・高級感を感じさせるシャンパンゴールド */
             --text-main: #333333;
         }
 
@@ -23,10 +25,11 @@
             flex-direction: column;
             align-items: center;
             padding: 8px;
-            border-radius: 20px;
+            border-radius: 8px; /* 丸みを少し抑えてスタイリッシュに */
             z-index: 1000;
             width: 44px;
-            box-shadow: 0 4px 14px rgba(0, 0, 0, 0.15);
+            box-shadow: 0 4px 14px rgba(0, 0, 0, 0.25);
+            border: 1px solid rgba(255,255,255,0.1);
         }
 
         .side-nav a {
@@ -40,7 +43,7 @@
             margin: 4px 0;
             padding: 4px;
             transition: background 0.2s, transform 0.15s;
-            border-radius: 999px;
+            border-radius: 4px;
             width: 32px;
             height: 32px;
             text-align: center;
@@ -53,15 +56,17 @@
             top: 5px;
             left: 50%;
             transform: translateX(-50%);
+            color: var(--accent-color); /* アイコン色をアクセントカラーに */
         }
 
         .side-nav a i {
             margin-top: 16px;
             font-size: 12px;
+            color: #fff;
         }
 
         .side-nav a:hover {
-            background: rgba(255, 255, 255, 0.2);
+            background: rgba(255, 255, 255, 0.1);
             transform: translateY(-1px);
         }
 
@@ -75,20 +80,19 @@
                 width: 40px;
                 padding: 6px;
             }
-
             .side-nav a {
                 width: 30px;
                 height: 30px;
             }
-
             .side-nav a i {
                 font-size: 11px;
             }
         }
 
         body {
-            font-family: -apple-system, BlinkMacSystemFont, "Hiragino Sans", "Noto Sans JP", "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
-            background: linear-gradient(135deg, #f7fbfb, #e3f2f2);
+            font-family: "Helvetica Neue", Arial, "Hiragino Kaku Gothic ProN", "Hiragino Sans", Meiryo, sans-serif;
+            /* 背景をシックなグレー系に */
+            background: #eef1f5;
             display: flex;
             justify-content: center;
             align-items: flex-start;
@@ -100,186 +104,204 @@
 
         .container {
             background-color: #ffffff;
-            border-radius: 18px;
-            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.06);
+            border-radius: 10px; /* 丸みを少し抑える */
+            box-shadow: 0 10px 40px rgba(0, 0, 0, 0.08);
             width: 100%;
             max-width: 520px;
-            padding: 22px 18px 24px;
+            padding: 30px 20px;
             box-sizing: border-box;
             position: relative;
             overflow: hidden;
+            border-top: 5px solid var(--base-color); /* 上部にアクセントライン */
         }
 
+        /* 背景の装飾を幾何学的に変更 */
         .container::before {
             content: "";
             position: absolute;
-            right: -40px;
-            top: -40px;
-            width: 140px;
-            height: 140px;
-            background: radial-gradient(circle at center, rgba(106,178,175,0.28), transparent 70%);
-            opacity: 0.9;
+            right: -20px;
+            top: -20px;
+            width: 100px;
+            height: 100px;
+            background: linear-gradient(135deg, transparent 50%, rgba(191, 163, 118, 0.2) 50%);
             pointer-events: none;
+            z-index: 0;
         }
 
         h1 {
-            background: linear-gradient(135deg, var(--base-color), var(--base-color-dark));
-            color: #ffffff;
-            padding: 18px 18px 18px 20px;
-            border-radius: 14px;
-            margin: 0 0 18px;
-            font-size: 22px;
+            color: var(--base-color);
+            padding: 0 0 15px 0;
+            margin: 0 0 25px;
+            font-size: 24px;
             font-weight: 700;
-            box-shadow: 0 4px 14px rgba(0, 0, 0, 0.12);
             position: relative;
-            overflow: hidden;
+            border-bottom: 2px solid var(--base-color-light);
+            background: none;
+            box-shadow: none;
+            border-radius: 0;
+            text-align: center;
+            letter-spacing: 0.05em;
         }
 
         h1::after {
-            content: "Counseling";
-            position: absolute;
-            right: 12px;
-            bottom: -6px;
-            font-size: 14px;
-            color: rgba(255, 255, 255, 0.35);
-            letter-spacing: 0.08em;
+            content: "COUNSELING SHEET";
+            display: block;
+            font-size: 10px;
+            color: var(--accent-color);
+            letter-spacing: 0.2em;
+            margin-top: 4px;
+            font-weight: 400;
         }
 
         .info-text {
-            margin: 4px 0 18px 0;
+            margin: 4px 0 24px 0;
             font-size: 14px;
             color: var(--text-main);
             background-color: var(--base-color-light);
             line-height: 1.8;
             text-align: left;
             word-wrap: break-word;
-            padding: 12px 12px 12px 14px;
-            border-radius: 10px;
-            border: 1px solid rgba(106, 178, 175, 0.4);
+            padding: 16px;
+            border-radius: 6px;
+            border-left: 4px solid var(--base-color); /* 左端に色のライン */
             position: relative;
         }
 
         .label {
             display: block;
-            margin: 4px 0 8px 0;
-            padding: 7px 10px;
+            margin: 0 auto 12px auto;
+            padding: 6px 15px;
             font-weight: 600;
-            background-color: var(--base-color);
-            color: #ffffff;
-            border-radius: 999px;
-            font-size: 15px;
+            color: var(--base-color);
+            background: transparent;
+            border: 1px solid var(--base-color);
+            border-radius: 50px;
+            font-size: 14px;
             text-align: center;
-            letter-spacing: 0.03em;
-            position: relative;
-        }
-
-        .label::before {
-            content: "Q.";
-            position: absolute;
-            left: 14px;
-            top: 50%;
-            transform: translateY(-50%);
-            font-size: 13px;
-            font-weight: 700;
-            opacity: 0.9;
+            letter-spacing: 0.05em;
+            width: fit-content;
         }
 
         .problem-buttons {
             display: flex;
             flex-wrap: wrap;
-            gap: 8px;
-            margin-bottom: 18px;
+            gap: 10px;
+            margin-bottom: 30px;
         }
 
         .problem-buttons button {
-            flex: 1 1 calc(50% - 4px);
-            padding: 10px 8px;
-            border-radius: 8px;
+            flex: 1 1 calc(50% - 5px);
+            padding: 14px 10px;
+            border-radius: 4px; /* 角を四角くしてメンズ・シャープな印象に */
             background-color: #ffffff;
             cursor: pointer;
             box-sizing: border-box;
             text-align: center;
             white-space: nowrap;
             font-size: 14px;
-            border: 1px solid rgba(106, 178, 175, 0.5);
-            color: var(--base-color-dark);
-            transition: background-color 0.15s, color 0.15s, box-shadow 0.15s, transform 0.1s, border-color 0.15s;
+            font-weight: 500;
+            border: 1px solid #dce3e8;
+            color: var(--text-main);
+            transition: all 0.2s;
+            box-shadow: 0 2px 5px rgba(0,0,0,0.03);
         }
 
         .problem-buttons button:hover {
+            border-color: var(--base-color);
             background-color: var(--base-color-light);
-            box-shadow: 0 3px 10px rgba(0, 0, 0, 0.05);
-            transform: translateY(-1px);
+            transform: translateY(-2px);
         }
 
         .problem-buttons button.active {
-            background: linear-gradient(135deg, var(--base-color), var(--base-color-dark));
+            background: var(--base-color);
             color: #ffffff;
-            border-color: var(--base-color-dark);
-            box-shadow: 0 4px 12px rgba(106, 178, 175, 0.35);
+            border-color: var(--base-color);
+            box-shadow: 0 4px 10px rgba(32, 54, 75, 0.3);
+            position: relative;
+        }
+        
+        /* アクティブ時にチェックマークのような装飾 */
+        .problem-buttons button.active::after {
+            content: "✔";
+            position: absolute;
+            top: 50%;
+            right: 10px;
+            transform: translateY(-50%);
+            font-size: 10px;
+            color: var(--accent-color);
         }
 
         button {
-            padding: 12px;
+            /* リセットと共通スタイル */
+            font-family: inherit;
             border: none;
-            border-radius: 999px;
-            background: var(--base-color);
-            color: #ffffff;
-            font-size: 16px;
-            cursor: pointer;
-            transition: background 0.2s, transform 0.1s, box-shadow 0.2s;
-            font-weight: 600;
-            letter-spacing: 0.04em;
-        }
-
-        button:hover {
-            background: var(--base-color-dark);
-            transform: translateY(-1px);
-            box-shadow: 0 4px 14px rgba(0, 0, 0, 0.15);
-        }
-
-        button:active {
-            transform: scale(0.97);
-            box-shadow: none;
+            outline: none;
+            appearance: none;
         }
 
         .submit-button {
             width: 100%;
-            padding: 14px;
-            font-size: 17px;
-            margin-top: 6px;
-            background: linear-gradient(135deg, var(--base-color-dark), var(--base-color));
-            box-shadow: 0 6px 18px rgba(106, 178, 175, 0.45);
+            padding: 16px;
+            font-size: 16px;
+            font-weight: 700;
+            margin-top: 10px;
+            border-radius: 6px;
+            background: linear-gradient(to right, var(--base-color), var(--base-color-dark));
+            color: #fff;
+            box-shadow: 0 8px 20px rgba(32, 54, 75, 0.25);
+            cursor: pointer;
+            transition: all 0.3s;
+            letter-spacing: 0.1em;
+            position: relative;
+            overflow: hidden;
+        }
+
+        /* ボタンのキラッとする光沢感（高級感） */
+        .submit-button::before {
+            content: "";
+            position: absolute;
+            top: 0;
+            left: -100%;
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(90deg, transparent, rgba(255,255,255,0.2), transparent);
+            transition: 0.5s;
+        }
+
+        .submit-button:hover::before {
+            left: 100%;
         }
 
         .submit-button:hover {
-            background: linear-gradient(135deg, var(--base-color), var(--base-color-dark));
+            transform: translateY(-2px);
+            box-shadow: 0 10px 25px rgba(32, 54, 75, 0.35);
+        }
+
+        .submit-button:active {
+            transform: scale(0.98);
         }
 
         .submit-button span {
-            font-size: 13px;
+            font-size: 12px;
             display: block;
-            margin-top: 2px;
-            opacity: 0.85;
+            margin-top: 4px;
+            color: var(--accent-color);
+            font-weight: 400;
+            letter-spacing: 0.05em;
         }
 
         @media (max-width: 768px) {
             .container {
-                padding: 18px 14px 22px;
+                padding: 24px 16px;
             }
 
             h1 {
                 font-size: 20px;
-                padding: 16px 14px 16px 16px;
-            }
-
-            h1::after {
-                font-size: 12px;
             }
 
             .problem-buttons button {
                 font-size: 13px;
-                padding: 9px 6px;
+                padding: 12px 5px;
             }
         }
     </style>
@@ -288,14 +310,16 @@
 <body>
 
     <div class="container">
-        <h1>LOENUカウンセリングアンケート</h1>
+        <h1>LOENU<br><span style="font-size: 16px; font-weight: normal; display: block; margin-top: 5px;">COUNSELING SHEET</span></h1>
 
-        <div class="label">あなたのお悩みを下記からお選びください</div>
+        <div class="label">Q. お悩みをお選びください</div>
         <div class="info-text">
-            ▼下記8項目よりお悩みをお選びください。<br>
-            <span style="color:#e55353; font-weight:bold;">※2個まで選択可能です。</span><br>
-            送信ボタンを押すと、<br>
-            <strong>選択した項目名のみ</strong>がテキストで送信されます。
+            ▼下記8項目より現在のお悩みをお選びください。<br>
+            <span style="color:#c74a4a; font-weight:bold; font-size: 13px;">※2個まで選択可能です。</span><br>
+            <div style="margin-top: 8px; font-size: 12px; opacity: 0.8;">
+                送信ボタンを押すと、<br>
+                <strong>選択した項目名のみ</strong>がテキストで送信されます。
+            </div>
         </div>
 
         <div class="problem-buttons">
@@ -305,16 +329,16 @@
             <button type="button" onclick="toggleProblem(this)" data-value="毛穴">毛穴</button>
             <button type="button" onclick="toggleProblem(this)" data-value="シワたるみ">シワたるみ</button>
             <button type="button" onclick="toggleProblem(this)" data-value="カミソリ負け">カミソリ負け</button>
-            <button type="button" onclick="toggleProblem(this)" data-value="ムダ毛">ムダ毛</button>
+            <button type="button" onclick="toggleProblem(this)" data-value="ムダ毛・ヒゲ">ムダ毛・ヒゲ</button>
             <button type="button" onclick="toggleProblem(this)" data-value="その他">その他</button>
         </div>
 
         <button class="submit-button" onclick="submitForm()" id="section-message">
             送信する
+            <span>SEND MESSAGE</span>
         </button>
     </div>
 
-    <!-- LIFF SDK -->
     <script src="https://static.line-scdn.net/liff/edge/2.1/sdk.js"></script>
     <script>
         let selectedProblems = [];
