--- a/index.html
+++ b/index.html
@@ -726,9 +726,11 @@ let menuTimes = {
             const visitCountText = visitCount ? `・<span style="color:#ab83e6;"><strong>ご来店回数</strong></span>：${visitCount}` : '・来店回数が未選択です';
             const selectedMenuText = selectedMenu ? `・<span style="color:#ab83e6;"><strong>コース</strong></span>：${selectedMenu}` : '・コースが未選択です';
 
-            const selectedSymptomText = selectedSymptom.length > 0
-                ? `<span style="color:#ab83e6;"><strong>【メニュー】</strong></span><br>・${selectedSymptom.join('<br>・')}`
-                : '・メニューが未選択です';
+const selectedSymptomText = selectedSymptom.length > 0
+    ? `<span style="color:#ab83e6;"><strong>【メニュー】</strong></span><br>・${
+        selectedSymptom.map(item => item.name).join('<br>・')
+      }`
+    : '・メニューが未選択です';
 
             const irradiationsText = irradiationsCount
                 ? `<span style="color:#ab83e6;"><strong>【オプション】</strong></span><br>・${irradiationsCount.split(', ').join('<br>・')}`
