--- a/index.html
+++ b/index.html
@@ -630,7 +630,7 @@
         .side-nav {
             position: fixed;
             right: 0;
-            top: 85%;
+            top: 82%;
             transform: translateY(50%);
             background: var(--primary-color);
             display: flex;
@@ -768,24 +768,21 @@
                 <span class="highlight-text">◆ブライダルコース◆</span>
             </div>
             <div class="symptoms">
-                <button type="button" onclick="selectSymptom(this, 'treatment1')" data-price="15000">和装プラン〈30分〉</button>
-                <button type="button" onclick="selectSymptom(this, 'treatment2')"
-                    data-price="15000">洋装プランA〈60分〉</button>
-                <button type="button" onclick="selectSymptom(this, 'treatment3')"
-                    data-price="15000">洋装プランB〈120分〉</button>
-                <button type="button" onclick="selectSymptom(this, 'treatment4')"
-                    data-price="15000">洋装プランC〈30分〉</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment1')" data-price="0">和装プラン〈30分〉</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment2')" data-price="0">洋装プランA〈60分〉</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment3')" data-price="0">洋装プランB〈120分〉</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment4')" data-price="0">洋装プランC〈30分〉</button>
             </div>
             <div class="labeltyuuou">
                 <span class="highlight-text">オプション</span>
             </div>
             <div class="irradiations">
                 <button type="button" id="firstirradiations" onclick="selectirradiations(this)"
-                    data-price="15000">眉カット〈30分〉</button>
+                    data-price="0">眉カット〈30分〉</button>
                 <button type="button" id="secondirradiations" onclick="selectirradiations(this)"
-                    data-price="15000">ベーシックマッサージ〈30分〉</button>
+                    data-price="0">ベーシックマッサージ〈30分〉</button>
                 <button type="button" id="thirdirradiations" onclick="selectirradiations(this)"
-                    data-price="15000">リラックスマッサージ〈30分〉</button>
+                    data-price="0">リラックスマッサージ〈30分〉</button>
             </div>
         </div>
 
@@ -794,33 +791,30 @@
                 <span class="highlight-text">◆シェービングコース◆</span>
             </div>
             <div class="symptoms">
-                <button type="button" onclick="selectSymptom(this, 'treatment5')"
-                    data-price="15000">リラックスコース〈60分〉</button>
-                <button type="button" onclick="selectSymptom(this, 'treatment6')"
-                    data-price="15000">ベーシックコース〈30分〉</button>
-                <button type="button" onclick="selectSymptom(this, 'treatment7')"
-                    data-price="15000">スピードコース〈90分〉</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment5')" data-price="0">リラックスコース〈60分〉</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment6')" data-price="0">ベーシックコース〈30分〉</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment7')" data-price="0">スピードコース〈90分〉</button>
             </div>
             <div class="labeltyuuou">
                 <span class="highlight-text">オプション</span>
             </div>
             <div class="irradiations">
                 <button type="button" id="fourthirradiations" onclick="selectirradiations(this)"
-                    data-price="15000">眉カット〈30分〉</button>
+                    data-price="0">眉カット〈30分〉</button>
                 <button type="button" id="fifthirradiations" onclick="selectirradiations(this)"
-                    data-price="15000">襟足〈30分〉</button>
+                    data-price="0">襟足〈30分〉</button>
                 <button type="button" id="sixthirradiations" onclick="selectirradiations(this)"
-                    data-price="15000">背中</button>
+                    data-price="0">背中</button>
                 <button type="button" id="seventhirradiations" onclick="selectirradiations(this)"
-                    data-price="15000">背中(腰まで)〈30分〉</button>
+                    data-price="0">背中(腰まで)〈30分〉</button>
                 <button type="button" id="eighthirradiations" onclick="selectirradiations(this)"
-                    data-price="15000">デコルテ〈30分〉</button>
+                    data-price="0">デコルテ〈30分〉</button>
                 <button type="button" id="ninthirradiations" onclick="selectirradiations(this)"
-                    data-price="15000">腕〈30分〉</button>
+                    data-price="0">腕〈30分〉</button>
                 <button type="button" id="tenthirradiations" onclick="selectirradiations(this)"
-                    data-price="15000">保湿パック〈30分〉</button>
+                    data-price="0">保湿パック〈30分〉</button>
                 <button type="button" id="eleventhirradiations" onclick="selectirradiations(this)"
-                    data-price="15000">美白パック〈30分〉</button>
+                    data-price="0">美白パック〈30分〉</button>
             </div>
         </div>
 
@@ -830,30 +824,30 @@
             </div>
             <div class="symptoms">
                 <button type="button" onclick="selectSymptom(this, 'treatment8')"
-                    data-price="15000">リラックスマッサージ〈30分〉</button>
+                    data-price="0">リラックスマッサージ〈30分〉</button>
                 <button type="button" onclick="selectSymptom(this, 'treatment9')"
-                    data-price="15000">ベーシックマッサージ〈30分〉</button>
+                    data-price="0">ベーシックマッサージ〈30分〉</button>
             </div>
             <div class="labeltyuuou">
                 <span class="highlight-text">オプション</span>
             </div>
             <div class="irradiations">
                 <button type="button" id="twelvethirradiations" onclick="selectirradiations(this)"
-                    data-price="15000">眉カット〈30分〉</button>
+                    data-price="0">眉カット〈30分〉</button>
                 <button type="button" id="thirteenthirradiations" onclick="selectirradiations(this)"
-                    data-price="15000">襟足〈30分〉</button>
+                    data-price="0">襟足〈30分〉</button>
                 <button type="button" id="fourteenthirradiations" onclick="selectirradiations(this)"
-                    data-price="15000">背中</button>
+                    data-price="0">背中</button>
                 <button type="button" id="fifteenthirradiations" onclick="selectirradiations(this)"
-                    data-price="15000">背中(腰まで)〈30分〉</button>
+                    data-price="0">背中(腰まで)〈30分〉</button>
                 <button type="button" id="sixteenthirradiations" onclick="selectirradiations(this)"
-                    data-price="15000">デコルテ〈30分〉</button>
+                    data-price="0">デコルテ〈30分〉</button>
                 <button type="button" id="seventeenthirradiations" onclick="selectirradiations(this)"
-                    data-price="15000">腕〈30分〉</button>
+                    data-price="0">腕〈30分〉</button>
                 <button type="button" id="eighteenthirradiations" onclick="selectirradiations(this)"
-                    data-price="15000">保湿パック〈30分〉</button>
+                    data-price="0">保湿パック〈30分〉</button>
                 <button type="button" id="nineteenthirradiations" onclick="selectirradiations(this)"
-                    data-price="15000">美白パック〈30分〉</button>
+                    data-price="0">美白パック〈30分〉</button>
             </div>
         </div>
 
@@ -1082,36 +1076,36 @@
             const labelStyle = "color:#0c0c0c; font-size:14px; border:1px solid #0c0c0c; padding:0px 3px; border-radius:4px;";
 
             const visitCountText = visitCount
-                ? `<span style="${labelStyle}"><strong>来店回数</strong></span> ${visitCount}`
+                ? `<span style="${labelStyle}"><strong>来店回数　</strong></span>‣${visitCount}`
                 : '・来店回数が未選択です';
 
             const selectedMenuText = selectedMenu
-                ? `<span style="${labelStyle}"><strong>コース</strong></span> ${selectedMenu}`
+                ? `<span style="${labelStyle}"><strong>コース　　</strong></span>‣${selectedMenu}`
                 : '・コースが未選択です';
 
             const selectedSymptomText = selectedSymptom.length > 0
-                ? `<span style="${labelStyle}"><strong>メニュー</strong></span><br>・${selectedSymptom.join('<br>')}`
+                ? `<span style="${labelStyle}"><strong>メニュー　</strong></span>‣${selectedSymptom.join('<br>')}`
                 : '・メニューが未選択です';
 
             const irradiationsText = irradiationsCount
-                ? `<span style="${labelStyle}"><strong>オプション</strong></span><br>・${irradiationsCount.split(', ').join('<br>・')}`
+                ? `<span style="${labelStyle}"><strong>オプション</strong></span>・${irradiationsCount.split(', ').join('<br>・')}`
                 : '・オプション無し';
 
             let totalMinutes = selectedMenuTime + selectedirradiationsTime + selectedVisitTime;
             let hours = Math.floor(totalMinutes / 60);
             let minutes = totalMinutes % 60;
-            let totalTimeText = `<span style="${labelStyle}"><strong>所要時間</strong></span> ${hours > 0 ? hours + '時間' : ''}${minutes}分`;
+            let totalTimeText = `<span style="${labelStyle}"><strong>所要時間　</strong></span>‣${hours > 0 ? hours + '時間' : ''}${minutes}分`;
 
-            const totalAmountText = `<span style="${labelStyle}"><strong>合計金額</strong></span> ¥${menuPrice + optionsPrice}`;
+            const totalAmountText = `<span style="${labelStyle}"><strong>合計金額　</strong></span>‣¥${menuPrice + optionsPrice}`;
 
             const selectedDateText = selectedFullDate
-                ? `<span style="${labelStyle}"><strong>希望日時</strong></span> ${selectedFullDate}`
+                ? `<span style="${labelStyle}"><strong>希望日時　</strong></span>‣${selectedFullDate}`
                 : '・日時が未選択です';
 
             // 修正ボタン付きのHTMLを作成
             document.getElementById('displayInfo').innerHTML = `
         <div class="info-row">
-            <p><span style="${labelStyle}"><strong>お名前</strong></span> ${name}</p>
+            <p><span style="${labelStyle}"><strong>お名前　　</strong></span>‣${name}</p>
             <button class="edit-button" onclick="scrollToElement('name')">修正</button>
         </div>
         <hr>
@@ -1127,7 +1121,7 @@
         <hr>
         <div class="info-row">
             <p>${selectedSymptomText}</p>
-            <button class="edit-button" onclick="scrollToElement('male'); scrollToElement('female'); scrollToElement('whitening');">修正</button>
+            <button class="edit-button" onclick="scrollToElement('course');">修正</button>
         </div>
         <hr>
         <div class="info-row">
